--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 4000:4000
     working_dir: /app
-    command: npm run start
+    command: bash -c "npm i && npm start"
 
   frontend:
     image: node:latest
@@ -17,4 +17,4 @@ services:
     ports:
       - 3000:3000
     working_dir: /app
-    command: npm run start
+    command: bash -c "npm i && npm start"
